Trying to add rotating words in header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Farishta Haider</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+	<link href="stylesheets/screen.css.scss" media="screen, projection" rel="stylesheet" type="text/css">
 	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="stylesheets/animate.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -33,19 +33,21 @@
 			<i class="logo fade-in one"></i>
 			<h1 class="fade-in two">Hello <strong>World</strong></h1>
 			<p class="fade-in three" "text"><strong>I</strong> am <strong>Farishta Haider</strong>
-				<!-- <div class="intro">
-				<h2>
 
-				<span class="rotate-words">
-				<span class="rotate-in active">web development.</span>
-				<span class="rotate-out">tech.</span>
-				<span class="rotate-out">pop culture.</span>
-				<span class="rotate-out">marketing.</span>
-				<span class="rotate-out">music.</span>
-				<span class="rotate-out">social media.</span>
-			</span>
-		</h2>
-	</div> -->
+				<div class="page-wrapper">
+   <div class="inner-page-wrapper">
+     <div class="intro">
+       <span class="intro-text">Farishta Haider likes </span>   <span class="list-of-frishWords">
+           <span class="frishWords">web development.</span>
+           <span class="frishWords">tech.</span>
+           <span class="frishWords">pop culture.</span>
+           <span class="frishWords">marketing.</span>
+           <span class="frishWords">social media.</span>
+         </span>
+       </div>
+    </div>
+</div>
+
 
 	<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
 	<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
@@ -107,7 +109,7 @@
 	<div class="holder">
 		<div id="to-work"></div>
 		<div class="title scrollflow -slide-top -opacity">
-			<h2>Portfolio</h2>
+			<h2>Resume</h2>
 		</div>
 		<div id="trivia" class="work_item">
 			<div class="slide_container">
@@ -135,7 +137,7 @@
 
 <section id="resume">
 	<div class="holder">
-		<div class="title scrollflow -slide-top -opacity"><h2>Resume</h2></div>
+		<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
 	</br>
 </br>
 <div id='app-container'>
