Making git correction

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 			<aside class="skills tab-content" id="skills">
 				<div class="meter">
-					<span>Photoshop</span>
+					<span>Photoshops</span>
 					<div class="photoshop" data-icon="100%"></div>
 				</div>
 				<div class="meter">
