--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 			<div></div>
 			<!-- <div class="container" id="nav">
 			<nav class="nav"> -->
-
+<h1> ahhhhhhhhhhhh why isnt this working </h1>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about_me.html">About Me</a></li>
