Portfolio Gallery is working great! Need to add overlay

--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 				<br><h3>WORDS</h3> WORDS.
 				<br><h3>WORDS</h3> WORDS.
 			</div>
+		</div>
+	</div>
+		<div class='clearfix'></div>
+	<div id='app-container'>
+		<div id='app-picturebox'>
 			<div class='app-picture' id='app-picture3'>
 				<img src='http://i.imgur.com/c4aHeqdh.jpg'>
 				<div class='app-pictureinfo' id='app-pictureinfo3' onclick=''>3<span>iCare</span></div>
@@ -179,13 +184,9 @@
 				<br><h3>WORDS</h3> WORDS.
 			</div>
 		</div>
-		<div id='app-charlinks'>
-	 <a href='#'><span>all posts</span></a>
-	 <a href='#'><span>send a pm</span></a>
-	 </div>
+
 		<div class='clearfix'></div>
-  <div id='app-info-container'> WORDS
-	</div>
+
 </div>
 </section>
 <section id="contactMe">
