--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Farishta Haider</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link href="stylesheets/screen.css.scss" media="screen, projection" rel="stylesheet" type="text/css">
+	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="stylesheets/animate.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
