--- a/index.html
+++ b/index.html
@@ -32,77 +32,72 @@
 		<div class="welcome">
 			<i class="logo fade-in one"></i>
 			<h1 class="fade-in two">Hello <strong>World</strong></h1>
-			<p class="fade-in three" "text"><strong>I</strong> am <strong>Farishta Haider</strong>
+			<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
+			<span class="rw-words rw-words-1"> <span>web development.</span>
+			<span>tech.</span>
+			<span>pop culture.</span>
+			<span>marketing.</span>
+			<span>social media.</span>
+			<span>PASSIONATE.</span>
+		</span></p>
 
-				<div class="page-wrapper">
-					<div class="inner-page-wrapper">
-						<div class="intro">
-							<span class="intro-text">Farishta Haider likes </span>   <span class="list-of-frishWords">
-								<span class="frishWords">web development.</span>
-								<span class="frishWords">tech.</span>
-								<span class="frishWords">pop culture.</span>
-								<span class="frishWords">marketing.</span>
-								<span class="frishWords">social media.</span>
-							</span>
-						</div>
+		<!-- </div> -->
+
+		<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
+		<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
+		</div>
+	</div>
+</section>
+<section id="about">
+	<div class="bg-image"></div>
+	<div class="holder">
+		<div class="title scrollflow -slide-top -opacity">
+			<h2>About</h2>
+		</div>
+		<div id="tabs-container">
+			<ul class="tabs-menu title scrollflow -slide-top -opacity">
+				<li class="current"><a href="#bio">About Me</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#experience">Experience</a></li>
+			</ul>
+			<div class="tab">
+				<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio" >
+					<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
+
+					<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+						<a href="mailto:farishta.haider@gmail.com" class="button">
+							<i class="fa fa-paper-plane"></i>
+							Hire Me
+						</a>
 					</div>
-				</div>
-
-				<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
-				<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
-				</div>
-			</div>
-		</section>
-		<section id="about">
-			<div class="bg-image"></div>
-			<div class="holder">
-				<div class="title scrollflow -slide-top -opacity">
-					<h2>About</h2>
-				</div>
-				<div id="tabs-container">
-					<ul class="tabs-menu title scrollflow -slide-top -opacity">
-						<li class="current"><a href="#bio">About Me</a></li>
-						<li><a href="#skills">Skills</a></li>
-						<li><a href="#experience">Experience</a></li>
-					</ul>
-					<div class="tab">
-						<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio" >
-							<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
-
-							<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
-								<a href="mailto:farishta.haider@gmail.com" class="button">
-									<i class="fa fa-paper-plane"></i>
-									Hire Me
-								</a>
-							</div>
-							<div class="headerimg"></div>
-						</aside>
-					</div>
-				</div>
-			</div>
-
-			<aside class="skills tab-content" id="skills">
-				<div class="meter">
-					<span>Photoshops</span>
-					<div class="photoshop" data-icon="100%"></div>
-				</div>
-				<div class="meter">
-					<span>Illustrator</span>
-					<div class="illustrator" data-icon="90%"></div>
-				</div>
-			</aside>
-			<aside class="experience tab-content" id="experience">
-				<div class="row">
-					<div class="logo danat"><div>
-						<div class="brief">
-							<span class"company-name">FRISH CO</span>
-							<span class"position">FRISH CO</span>
-						</div>
-					</div>
+					<div class="headerimg"></div>
 				</aside>
 			</div>
 		</div>
 	</div>
+
+	<aside class="skills tab-content" id="skills">
+		<div class="meter">
+			<span>Photoshops</span>
+			<div class="photoshop" data-icon="100%"></div>
+		</div>
+		<div class="meter">
+			<span>Illustrator</span>
+			<div class="illustrator" data-icon="90%"></div>
+		</div>
+	</aside>
+	<aside class="experience tab-content" id="experience">
+		<div class="row">
+			<div class="logo danat"><div>
+				<div class="brief">
+					<span class"company-name">FRISH CO</span>
+					<span class"position">FRISH CO</span>
+				</div>
+			</div>
+		</aside>
+	</div>
+</div>
+</div>
 </section>
 <section id="portfolio">
 	<div class="holder">
@@ -146,7 +141,7 @@
 			<div class='app-pictureinfo' id='app-pictureinfo1' onclick=''>1<span>Trivia Night</span></div>
 		</div>
 		<div class='app-picturedet' id='app-picturedet1' onclick=''>
-		 WORDS <p> WORDS . <p> WORDS
+			WORDS <p> WORDS . <p> WORDS
 			</div>
 			<div class='app-picture' id='app-picture2' onclick=''>
 				<img src='http://i.imgur.com/pT8gS04h.png'>
@@ -160,7 +155,7 @@
 			</div>
 		</div>
 	</div>
-		<div class='clearfix'></div>
+	<div class='clearfix'></div>
 	<div id='app-container'>
 		<div id='app-picturebox'>
 			<div class='app-picture' id='app-picture3'>
@@ -187,7 +182,7 @@
 
 		<div class='clearfix'></div>
 
-</div>
+	</div>
 </section>
 <section id="contactMe">
 	<div class="holder">
