Added filter to portfolio  gallery

--- a/index.html
+++ b/index.html
@@ -33,70 +33,67 @@
 			<i class="logo fade-in one"></i>
 			<h1 class="fade-in two">Hello <strong>World</strong></h1>
 			<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
-			<span class="rw-words rw-words-1"> <span>web development.</span>
-			<span>tech.</span>
-			<span>pop culture.</span>
-			<span>marketing.</span>
-			<span>social media.</span>
-			<span>PASSIONATE.</span>
-		</span></p>
-
-		<!-- </div> -->
-
-		<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
-		<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
-		</div>
-	</div>
-</section>
-<section id="about">
-	<div class="bg-image"></div>
-	<div class="holder">
-		<div class="title scrollflow -slide-top -opacity">
-			<h2>About</h2>
-		</div>
-		<div id="tabs-container">
-			<ul class="tabs-menu title scrollflow -slide-top -opacity">
-				<li class="current"><a href="#bio">About Me</a></li>
-				<li><a href="#skills">Skills</a></li>
-				<li><a href="#experience">Experience</a></li>
-			</ul>
-			<div class="tab">
-				<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio" >
-					<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
-
-					<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
-						<a href="mailto:farishta.haider@gmail.com" class="button">
-							<i class="fa fa-paper-plane"></i>
-							Hire Me
-						</a>
-					</div>
-					<div class="headerimg"></div>
-				</aside>
+				<span class="rw-words rw-words-1"> <span>tech.</span>
+				<span>web development.</span>
+				<span>pop culture.</span>
+				<span>marketing.</span>
+				<span>social media.</span>
+				<span>PASSIONATE.</span>
+			</span></p>
+			<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
+			<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
 			</div>
 		</div>
-	</div>
+	</section>
+	<section id="about">
+		<div class="bg-image"></div>
+		<div class="holder">
+			<div class="title scrollflow -slide-top -opacity">
+				<h2>About</h2>
+			</div>
+			<div id="tabs-container">
+				<ul class="tabs-menu title scrollflow -slide-top -opacity">
+					<li class="current"><a href="#bio">About Me</a></li>
+					<li><a href="#skills">Skills</a></li>
+					<li><a href="#experience">Experience</a></li>
+				</ul>
+				<div class="tab">
+					<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio" >
+						<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 
-	<aside class="skills tab-content" id="skills">
-		<div class="meter">
-			<span>Photoshops</span>
-			<div class="photoshop" data-icon="100%"></div>
-		</div>
-		<div class="meter">
-			<span>Illustrator</span>
-			<div class="illustrator" data-icon="90%"></div>
-		</div>
-	</aside>
-	<aside class="experience tab-content" id="experience">
-		<div class="row">
-			<div class="logo danat"><div>
-				<div class="brief">
-					<span class"company-name">FRISH CO</span>
-					<span class"position">FRISH CO</span>
+						<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+							<a href="mailto:farishta.haider@gmail.com" class="button">
+								<i class="fa fa-paper-plane"></i>
+								Hire Me
+							</a>
+						</div>
+						<div class="headerimg"></div>
+					</aside>
 				</div>
 			</div>
+		</div>
+
+		<aside class="skills tab-content" id="skills">
+			<div class="meter">
+				<span>Photoshops</span>
+				<div class="photoshop" data-icon="100%"></div>
+			</div>
+			<div class="meter">
+				<span>Illustrator</span>
+				<div class="illustrator" data-icon="90%"></div>
+			</div>
 		</aside>
+		<aside class="experience tab-content" id="experience">
+			<div class="row">
+				<div class="logo danat"><div>
+					<div class="brief">
+						<span class"company-name">FRISH CO</span>
+						<span class"position">FRISH CO</span>
+					</div>
+				</div>
+			</aside>
+		</div>
 	</div>
-</div>
 </div>
 </section>
 <section id="portfolio">
@@ -119,98 +116,104 @@
 				</div>
 			</div>
 		</div>
-		<!-- <a href="http://lafrish.github.io/Trivia_Night/"><img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game"></a>
-		<a href="http://cheerie.herokuapp.com/"><img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App"></a>
-		<a href="https://icare-volunteer-app.herokuapp.com/"><img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App"></a>
-		<a href=""><img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House"></a>
-		<a href="https://wdi8-yearbook.herokuapp.com/"><img src="http://www.educationpost.com.hk/sites/default/files/images/logo/institution/1ga_logo.jpg" alt="General Assembly's WDI 8 Yearbook"></a> -->
-
-
-	</br>
+	</div>
+</br>
 </section>
 
 <section id="resume">
 	<div class="holder">
 		<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
-	</br>
-</br>
-<div id='app-container'>
-	<div id='app-picturebox'>
-		<div class='app-picture' id='app-picture1'>
-			<img src='http://i.imgur.com/0JgJmIjh.png'>
-			<div class='app-pictureinfo' id='app-pictureinfo1' onclick=''>1<span>Trivia Night</span></div>
-		</div>
-		<div class='app-picturedet' id='app-picturedet1' onclick=''>
-			WORDS <p> WORDS . <p> WORDS
+		<div id='app-container'>
+			<div class="toggles">
+				<button class='button fade-in four' id='showall'>Show All</button>
+				<button class='button fade-in four' id='web'>Web Development</button>
+				<button class='button fade-in four' id='marketing'>Marketing</button>
+				<button class='button fade-in four' id='graphic'>Graphic Design</button>
+				<button class='button fade-in four' id='social'>Social Media</button>
 			</div>
-			<div class='app-picture' id='app-picture2' onclick=''>
-				<img src='http://i.imgur.com/pT8gS04h.png'>
-				<div class='app-pictureinfo' id='app-pictureinfo2' onclick=''>2<span>Cheerie</span></div>
-			</div>
-			<div class='app-picturedet' id='app-picturedet2' onclick=''>
-				<h3>WORDS</h3> WORDS .
-				<br><h3>WORDS</h3> WORDS?
-				<br><h3>WORDS</h3> WORDS.
-				<br><h3>WORDS</h3> WORDS.
-			</div>
-		</div>
-	</div>
-	<div class='clearfix'></div>
-	<div id='app-container'>
-		<div id='app-picturebox'>
-			<div class='app-picture' id='app-picture3'>
-				<img src='http://i.imgur.com/c4aHeqdh.jpg'>
-				<div class='app-pictureinfo' id='app-pictureinfo3' onclick=''>3<span>iCare</span></div>
-			</div>
-			<div class='app-picturedet' id='app-picturedet3' onclick=''>
-				<h3>WORDS</h3> WORDS .
-				<br><h3>WORDS</h3> WORDS?
-				<br><h3>WORDS</h3> WORDS.
-				<br><h3>WORDS</h3> WORDS.
-			</div>
-			<div class='app-picture' id='app-picture4'>
-				<img src='http://i.imgur.com/hqWOJhwh.png'>
-				<div class='app-pictureinfo' id='app-pictureinfo4' onclick=''>4<span>Node House</span></div>
-			</div>
-			<div class='app-picturedet' id='app-picturedet4' onclick=''>
-				<h3>WORDS</h3> WORDS .
-				<br><h3>WORDS</h3> WORDS?
-				<br><h3>WORDS</h3> WORDS.
-				<br><h3>WORDS</h3> WORDS.
-			</div>
-		</div>
+			<div id='app-picturebox'>
+				<div class='gallery_containers'>
+					<div class='web gallery_container'>
+						<div class='app-picture' id='app-picture1'>
+							<img src='http://i.imgur.com/0JgJmIjh.png'>
+							<div class='app-pictureinfo' id='app-pictureinfo1' onclick=''>Trivia Night</div>
+						</div>
+						<div class='app-picturedet' id='app-picturedet1' onclick=''>
+							WORDS <p> WORDS . <p> WORDS
+							</div>
+						</div>
+						<div class='marketing gallery_container'>
+							<div class='app-picture' id='app-picture2' onclick=''>
+								<img src='http://i.imgur.com/pT8gS04h.png'>
+								<div class='app-pictureinfo' id='app-pictureinfo2' onclick=''>Cheerie</div>
+							</div>
+							<div class='app-picturedet' id='app-picturedet2' onclick=''>
+								<h3>WORDS</h3> WORDS .
+								<br><h3>WORDS</h3> WORDS?
+								<br><h3>WORDS</h3> WORDS.
+								<br><h3>WORDS</h3> WORDS.
+							</div>
+						</div>
+						<div class= 'social gallery_container'>
+							<div id='app-picturebox'>
+								<div class='app-picture' id='app-picture3'>
+									<img src='http://i.imgur.com/c4aHeqdh.jpg'>
+									<div class='app-pictureinfo' id='app-pictureinfo3' onclick=''>iCare</div>
+								</div>
+								<div class='app-picturedet' id='app-picturedet3' onclick=''>
+									<h3>WORDS</h3> WORDS .
+									<br><h3>WORDS</h3> WORDS?
+									<br><h3>WORDS</h3> WORDS.
+									<br><h3>WORDS</h3> WORDS.
+								</div>
+							</div>
+							<div class='graphic gallery_container'>
+								<div class='app-picture' id='app-picture4'>
 
-		<div class='clearfix'></div>
+									<img src='http://i.imgur.com/hqWOJhwh.png'>
+									<div class='app-pictureinfo' id='app-pictureinfo4' onclick=''>Node House</div>
+								</div>
+								<div class='app-picturedet' id='app-picturedet4' onclick=''>
+									<h3>WORDS</h3> WORDS .
+									<br><h3>WORDS</h3> WORDS?
+									<br><h3>WORDS</h3> WORDS.
+									<br><h3>WORDS</h3> WORDS.
+								</div>
+							</div>
+							<div class='clearfix'></div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-	</div>
-</section>
-<section id="contactMe">
-	<div class="holder">
-		<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
-		<div class="contact-info">
-			<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider@gmail.com</a></div>
-			<div class="tel"><i class="fa fa-mobile"></i> <strong> 301 - 509 - 2483</strong></div>
-		</div>
-		<div class="social">
-			<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
-			<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github"></i>
-			</a>
-			<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fa fa-linkedin"></i></a>
-			<a href="https://www.facebook.com/farishta.haider" target="_blank"><i class="fa fa-facebook"></i></a>
-			<a href="https://twitter.com/lafrish" target="_blank"><i class="fa fa-twitter"></i></a>
-			<a href="https://plus.google.com/u/0/115133210735023070083/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
-		</div>
-		<a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com" class="button">Get in touch</a>
-		<div class="copy">© Copyright 2016 Farishta Haider Portfolio</div>
-	</div>
-</section>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
-<script type="text/javascript" src="javascripts/script.js"></script>
-<script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
-<script type="text/javascript" src="javascripts/jquery.js"></script>
-<script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
-<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
-</body>
-</html>
+		</section>
+		<section id="contactMe">
+			<div class="holder">
+				<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
+				<div class="contact-info">
+					<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider@gmail.com</a></div>
+					<div class="tel"><i class="fa fa-mobile"></i> <strong> 301 - 509 - 2483</strong></div>
+				</div>
+				<div class="social">
+					<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
+					<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github"></i>
+					</a>
+					<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fa fa-linkedin"></i></a>
+					<a href="https://www.facebook.com/farishta.haider" target="_blank"><i class="fa fa-facebook"></i></a>
+					<a href="https://twitter.com/lafrish" target="_blank"><i class="fa fa-twitter"></i></a>
+					<a href="https://plus.google.com/u/0/115133210735023070083/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
+				</div>
+				<a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com" class="button">Get in touch</a>
+				<div class="copy">© Copyright 2016 Farishta Haider Portfolio</div>
+			</div>
+		</section>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
+		<script type="text/javascript" src="javascripts/script.js"></script>
+		<script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
+		<script type="text/javascript" src="javascripts/jquery.js"></script>
+		<script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
+		<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
+		<script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
+	</body>
+	</html>
