--- a/index.html
+++ b/index.html
@@ -131,53 +131,82 @@
 				<button class='button fade-in four' id='graphic'>Graphic Design</button>
 				<button class='button fade-in four' id='social'>Social Media</button>
 			</div>
+
 			<div id='app-picturebox'>
 				<div class='gallery_containers'>
 					<div class='web gallery_container'>
 						<div class='app-picture' id='app-picture1'>
-							<img src='http://i.imgur.com/0JgJmIjh.png'>
+							<img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game">
 							<div class='app-pictureinfo' id='app-pictureinfo1' onclick=''>Trivia Night</div>
 						</div>
 						<div class='app-picturedet' id='app-picturedet1' onclick=''>
 							WORDS <p> WORDS . <p> WORDS
+								<button class='button fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
+								<button class='button fade-in four'><a href="http://lafrish.github.io/Trivia_Night/">Link to Trivia</a></button>
 							</div>
 						</div>
 						<div class='marketing gallery_container'>
 							<div class='app-picture' id='app-picture2' onclick=''>
-								<img src='http://i.imgur.com/pT8gS04h.png'>
+								<img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App">
 								<div class='app-pictureinfo' id='app-pictureinfo2' onclick=''>Cheerie</div>
 							</div>
 							<div class='app-picturedet' id='app-picturedet2' onclick=''>
 								<h3>WORDS</h3> WORDS .
 								<br><h3>WORDS</h3> WORDS?
-								<br><h3>WORDS</h3> WORDS.
-								<br><h3>WORDS</h3> WORDS.
+								<button class='button fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
+								<button class='button fade-in four'><a href="http://cheerie.herokuapp.com/">Link to Cheerie</a></button>
 							</div>
 						</div>
 						<div class= 'social gallery_container'>
 							<div id='app-picturebox'>
 								<div class='app-picture' id='app-picture3'>
-									<img src='http://i.imgur.com/c4aHeqdh.jpg'>
+									<img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App">
 									<div class='app-pictureinfo' id='app-pictureinfo3' onclick=''>iCare</div>
 								</div>
 								<div class='app-picturedet' id='app-picturedet3' onclick=''>
 									<h3>WORDS</h3> WORDS .
 									<br><h3>WORDS</h3> WORDS?
-									<br><h3>WORDS</h3> WORDS.
-									<br><h3>WORDS</h3> WORDS.
+									<button class='button fade-in four'><a href="https://github.com/aklein916/iCare-Volunteer-Project">Github</a></button>
+									<button class='button fade-in four'><a href="https://icare-volunteer-app.herokuapp.com/">Link to iCare</a></button>
 								</div>
 							</div>
 							<div class='graphic gallery_container'>
 								<div class='app-picture' id='app-picture4'>
 
-									<img src='http://i.imgur.com/hqWOJhwh.png'>
+									<img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House">
 									<div class='app-pictureinfo' id='app-pictureinfo4' onclick=''>Node House</div>
 								</div>
 								<div class='app-picturedet' id='app-picturedet4' onclick=''>
 									<h3>WORDS</h3> WORDS .
 									<br><h3>WORDS</h3> WORDS?
-									<br><h3>WORDS</h3> WORDS.
-									<br><h3>WORDS</h3> WORDS.
+									<button class='button fade-in four'><a href="https://github.com/LaFrish/beachhouse">Github</a></button>
+									<button class='button fade-in four'><a href="">Link to Node House</a></button>
+								</div>
+							</div>
+							<div class='graphic gallery_container'>
+								<div class='app-picture' id='app-picture5'>
+
+									<img src="images/1167.png" alt="WDI8 Yearbook">
+									<div class='app-pictureinfo' id='app-pictureinfo5' onclick=''>WDI8 Yearbook</div>
+								</div>
+								<div class='app-picturedet' id='app-picturedet5' onclick=''>
+									<h3>WORDS</h3> WORDS .
+									<br><h3>WORDS</h3> WORDS?
+									<button class='button fade-in four'><a href="https://github.com/LaFrish/wdi8-yearbook">Github</a></button>
+									<button class='button fade-in four'><a href="wdi8-yearbook.herokuapp.com">Link to Yearbook</a></button>
+								</div>
+							</div>
+							<div class='graphic gallery_container'>
+								<div class='app-picture' id='app-picture6'>
+
+									<img src="images/1167.png" alt="">
+									<div class='app-pictureinfo' id='app-pictureinfo6' onclick=''></div>
+								</div>
+								<div class='app-picturedet' id='app-picturedet6' onclick=''>
+									<h3>WORDS</h3> WORDS .
+									<br><h3>WORDS</h3> WORDS?
+									<button class='button fade-in four'><a href="">Github</a></button>
+									<button class='button fade-in four'><a href="">Link to </a></button>
 								</div>
 							</div>
 							<div class='clearfix'></div>
@@ -187,6 +216,19 @@
 			</div>
 
 		</section>
+
+
+
+
+
+		<!-- links to projects
+		<a href="http://lafrish.github.io/Trivia_Night/"><img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game"></a>
+		<a href="http://cheerie.herokuapp.com/"><img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App"></a>
+		<a href="https://icare-volunteer-app.herokuapp.com/"><img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App"></a>
+		<a href=""><img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House"></a>
+<a href="https://wdi8-yearbook.herokuapp.com/"><img src="http://www.educationpost.com.hk/sites/default/files/images/logo/institution/1ga_logo.jpg" alt="General Assembly's WDI 8 Yearbook"></a> -->
+
+
 		<section id="contactMe">
 			<div class="holder">
 				<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
