for outcomes to review

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="stylesheets/animate.css">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
 </head>
 
@@ -75,26 +75,54 @@
 
 		<aside class="skills tab-content" id="skills">
 			<div class="meter">
-				<span>Photoshops</span>
-				<div class="photoshop" data-icon="100%"></div>
+				<h2>HTML/CSS</h2>
+				<h2>Javascript</h2>
+				<h2>Ruby on Rails</h2>
+				<h2>AngularJS</h2>
+				<h2>NodeJS</h2>
+				<h2>MongoDB</h2>
+				<h2>ExpressJS</h2>
+				<h2>NodeJS</h2>
+				<h2>Microsoft Office</h2>
+				<h2>Marketing</h2>
+				<h2>Photoshops</h2>
+				<h2>Illustrator</h2>
+				<!-- <div class="photoshop" data-icon="100%"></div> -->
 			</div>
-			<div class="meter">
-				<span>Illustrator</span>
-				<div class="illustrator" data-icon="90%"></div>
-			</div>
+			<!-- <div class="meter">
+				<h2>Illustrator</h2>
+				<!-- <div class="illustrator" data-icon="90%"></div> -->
+			</div> -->
 		</aside>
 		<aside class="experience tab-content" id="experience">
 			<div class="row">
-				<div class="logo danat"><div>
+				<img src="images/montage.png"></img>
 					<div class="brief">
-						<span class"company-name">FRISH CO</span>
-						<span class"position">FRISH CO</span>
+						<span class"company-name">Montage Marketing Group</span>
+						<span class"position">Marketing Consultant</span>
 					</div>
 				</div>
-			</aside>
-		</div>
+				</div>
+			</div>
+				<div class="row">
+				<img src="images/geico-logo.jpg"></img>
+				<div class="brief">
+					<span class"company-name">GEICO</span>
+					<span class"position">Marketing Buyer</span>
+				</div>
+				</div>
+				</div>
+				</div>
+				<div class="row">
+				<img src="images/summitlogo.jpg"></img>
+				<div class="brief">
+					<span class"company-name">Summit Marketing</span>
+					<span class"position">Program Accounts Manager</span>
+				</div>
+				</div>
+			</div>
 	</div>
-</div>
+</aside>
 </section>
 <section id="portfolio">
 	<div class="holder">
@@ -106,7 +134,6 @@
 			<div class="slide_container">
 				<div class="portfolio_description">
 					<h3> Project 1 - Trivia Night </h3>
-					<p> Javascript</p>
 					<div class="close_work"><div></div></div>
 					<div class="prev_work" id="trivia_prev"><div></div></div>
 					<div class="next_work" id="trivia_next"><div></div></div>
@@ -124,13 +151,13 @@
 	<div class="holder">
 		<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
 		<div id='app-container'>
-			<div class="toggles">
+			<!-- <div class="toggles">
 				<button class='button fade-in four' id='showall'>Show All</button>
 				<button class='button fade-in four' id='web'>Web Development</button>
 				<button class='button fade-in four' id='marketing'>Marketing</button>
 				<button class='button fade-in four' id='graphic'>Graphic Design</button>
 				<button class='button fade-in four' id='social'>Social Media</button>
-			</div>
+			</div> -->
 
 			<div id='app-picturebox'>
 				<div class='gallery_containers'>
@@ -140,9 +167,9 @@
 							<div class='app-pictureinfo' id='app-pictureinfo1' onclick=''>Trivia Night</div>
 						</div>
 						<div class='app-picturedet' id='app-picturedet1' onclick=''>
-							WORDS <p> WORDS . <p> WORDS
-								<button class='button fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
-								<button class='button fade-in four'><a href="http://lafrish.github.io/Trivia_Night/">Link to Trivia</a></button>
+
+								<button class='fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
+								<button class='fade-in four'><a href="http://lafrish.github.io/Trivia_Night/">Link to Trivia</a></button>
 							</div>
 						</div>
 						<div class='marketing gallery_container'>
@@ -151,10 +178,9 @@
 								<div class='app-pictureinfo' id='app-pictureinfo2' onclick=''>Cheerie</div>
 							</div>
 							<div class='app-picturedet' id='app-picturedet2' onclick=''>
-								<h3>WORDS</h3> WORDS .
-								<br><h3>WORDS</h3> WORDS?
-								<button class='button fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
-								<button class='button fade-in four'><a href="http://cheerie.herokuapp.com/">Link to Cheerie</a></button>
+								<h3>An app to cheer you up</h3>
+								<button class='fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
+								<button class='fade-in four'><a href="http://cheerie.herokuapp.com/">Link to Cheerie</a></button>
 							</div>
 						</div>
 						<div class= 'social gallery_container'>
@@ -164,10 +190,9 @@
 									<div class='app-pictureinfo' id='app-pictureinfo3' onclick=''>iCare</div>
 								</div>
 								<div class='app-picturedet' id='app-picturedet3' onclick=''>
-									<h3>WORDS</h3> WORDS .
-									<br><h3>WORDS</h3> WORDS?
-									<button class='button fade-in four'><a href="https://github.com/aklein916/iCare-Volunteer-Project">Github</a></button>
-									<button class='button fade-in four'><a href="https://icare-volunteer-app.herokuapp.com/">Link to iCare</a></button>
+									<h3> Group project</h3>
+									<button class='fade-in four'><a href="https://github.com/aklein916/iCare-Volunteer-Project">Github</a></button>
+									<button class='fade-in four'><a href="https://icare-volunteer-app.herokuapp.com/">Link to iCare</a></button>
 								</div>
 							</div>
 							<div class='graphic gallery_container'>
@@ -177,13 +202,13 @@
 									<div class='app-pictureinfo' id='app-pictureinfo4' onclick=''>Node House</div>
 								</div>
 								<div class='app-picturedet' id='app-picturedet4' onclick=''>
-									<h3>WORDS</h3> WORDS .
-									<br><h3>WORDS</h3> WORDS?
-									<button class='button fade-in four'><a href="https://github.com/LaFrish/beachhouse">Github</a></button>
-									<button class='button fade-in four'><a href="">Link to Node House</a></button>
+									<h3>A MEAN APP</h3>
+								</br>
+									<button class='fade-in four'><a href="https://github.com/LaFrish/beachhouse">Github</a></button>
+									<button class='fade-in four'><a href="">Link to Node House</a></button>
 								</div>
 							</div>
-							<div class='graphic gallery_container'>
+							<!-- <div class='graphic gallery_container'>
 								<div class='app-picture' id='app-picture5'>
 
 									<img src="images/1167.png" alt="WDI8 Yearbook">
@@ -195,8 +220,8 @@
 									<button class='button fade-in four'><a href="https://github.com/LaFrish/wdi8-yearbook">Github</a></button>
 									<button class='button fade-in four'><a href="wdi8-yearbook.herokuapp.com">Link to Yearbook</a></button>
 								</div>
-							</div>
-							<div class='graphic gallery_container'>
+							</div> -->
+							<!-- <div class='graphic gallery_container'>
 								<div class='app-picture' id='app-picture6'>
 
 									<img src="images/1167.png" alt="">
@@ -208,7 +233,7 @@
 									<button class='button fade-in four'><a href="">Github</a></button>
 									<button class='button fade-in four'><a href="">Link to </a></button>
 								</div>
-							</div>
+							</div> -->
 							<div class='clearfix'></div>
 						</div>
 					</div>
